# iammarshallnz.github.io

./: Cargo.toml  README.md  about.html  blog-home.html  blog-post.html  blogpost1.html  blogpost2.html  blogpost3.html  contact.html  index.html  index.js  main.py  package-lock.json  package.json  portfolio-item.html  portfolio-overview.html  pricing.html  pyscript.json
pkg/: blackhole.d.ts  blackhole.js  blackhole_bg.wasm  blackhole_bg.wasm.d.ts  package.json
src/: blackhole.rs  common.rs  grid.rs  lib.rs  ray.rs  step.rs
timer/: main.py  pyscript.json  timer.html
